@@ -219,8 +219,12 @@ class Core(CorePluginBase):
             torrent.set_remove_at_ratio(options['remove_at_ratio'])
 
         if options["apply_move_completed"]:
-            torrent.set_move_on_completed(options["move_completed"])
-            torrent.set_move_on_completed_path(options["move_completed_path"])
+            torrent.set_options(
+                {
+                    "move_completed": options["move_completed"],
+                    "move_completed_path": options["move_completed_path"]
+                }
+            )
 
     def _has_auto_match(self, torrent ,label_options):
         "match for auto_add fields"
